assets/css/styles.css
html, body {
    scroll-behavior: smooth;
    font-family: "Raleway";
    font-size: 14px;
    font-style: normal;
    font-weight: 300;
    color: #eeeeee;
}

a {
    color: #E74C3C;
}

.home-navbar {
    background-color: rgba(52,73,94,1);
    color: #fff;
}

.home-navbar .navbar-nav .nav-link {
    color: #fff;
    font-family: Open Sans;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    padding: 5px 18px;
    text-align: center;
}

.home-navbar .navbar-nav .nav-link:hover, .home-navbar .navbar-nav .nav-link:active {
    border: 2px solid #E74C3C;
    border-radius: 50px;
    color: #E74C3C;
} 

.text-banner {
    background-color: #eeeeee;
    color: #4d4d4d;
    font-weight: 600;
    text-align: center;
    padding: 1.5rem 0;
}

.slider {
    background-color: #E74C3C;
    color: #fff;
    min-height: 430px;
    padding: 3rem 0;
}

.divider {
    margin: 4rem auto;
    width: 180px;
}

.divider .divider-line-h {
    background-color: #142638;
    height: 1px;
    margin: 0 auto auto;
    width: 100%;
}

.divider .divider-round-out {
    height: 14px;
    margin: -8px auto auto;
    width: 14px;
    position: inherit;
    border: 3px solid;
    border-color: #142638;
    background-color: #2d3e50;
    border-radius: 50%;
}

.divider .divider-round-in {
    background-color: #142638;
    height: 4px;
    margin: 2px 0 0 2px;
    width: 4px;
}

.carousel-item-image {
    padding: 15px 0 0;
    text-align: center;
}

.carousel-item-caption {
    padding-top: 60px;
    padding-left: 50px;
}

.carousel-title {
    margin-bottom: 15px;
    color: #FFF;
    text-transform: capitalize;
    font-weight: lighter;
    font-size: 48px;
    font-family: "Open Sans";
}

.carousel-description {
    padding: 5px 0 15px;
    font-size: 16px;
    font-weight: 400;
    color: #FFF;
    line-height: 26px;
}

.section-sub-title {
    font-size: 24px;
    font-weight: 300;
    line-height: 1.4;
    margin-bottom: 20px;
    text-align: center;
}

.section-title {
    font-family: Raleway;
    font-size: 34px;
    font-style: normal;
    font-weight: 300;
}

.demo {
    background-color: #2d3e4f;
    color: #fff;
    padding: 6rem 0;
}

.kenti {
    background-color: #ffa202;
    color: #fff;
    padding: 6rem 0;
}

.game-demo {
    background-color: #eeeeee;
    color: #4d4d4d;
    padding: 6rem 0;
}

.pre-footer-space {
    background-color: #2d3e4f;
    padding: 2.5rem 0;
}

.footer {
    background-color: #e74c3b;
    color: #fff;
    padding: 0.7rem 0;
    text-align: center;
}

.navbar-toggler {
    padding: .25rem .75rem;
    font-size: 1.25rem;
    line-height: 1;
    background-color: transparent;
    border: 1px solid #e74c3b;
    border-radius: .25rem;
}

